Changes for DateTime::Set

0.1204  2003-10-10
- DateTime::SpanSet and DateTime::Span inherit DateTime::Set $VERSION
- Trying to subtract infinity from a datetime is not fatal in duration()
  Bug report by Dan Kubb.
- new method 'iterate'
- requires Set::Infinite 0.5307 (pass new backtracking tests)
- added more tests for add_duration, subtract_duration
- added set( locale => .. ) to DateTime::Set

0.1203  2003-09-26
- Added docs to Set::Infinite::_recurrence;
  split into a separate file such that it doesn't mix the pods
- refactored union / intersection
- _is_recurrence test prevents error when programming subroutine methods

0.1202  2003-09-24
- fixed set_time_zone and add_duration: 
  was not clearing 'next' upon return, when arg was a recurrence.

0.1201  2003-09-24
- optimized contains() and intersects() when arg is a datetime
- recurrence constructor always adds '->clone' to recurrence function 
- refactored _recurrence method;
  first/last of recurrences are calculated 'on demand'
- requires Set::Infinite 0.5305

0.12   2003-09-22
- implement previous() in DT::SpanSet.pm
- Fixed: set_time_zone would mutate a clone.

0.11   2003-09-19
- Fixed callback return value on set_time_zone. 
  This caused the start date to be equal to the end date.
  Bug found by Dan Kubb.

0.10   2003-09-02
- DateTime::Span->duration now uses the new subtract_datetime_absolute
method, which means that the duration is always given in seconds.

- supports _huge_ recurrence sets (not infinite) with "virtual" elements.
  these sets have 'undef' count.
  Experimental - mostly untested !
  this adds support for sets like 'all seconds in 2003'

- faster recurrence intersection
- count returns 'undef' for infinite sets.

0.09    2003-08-18
- added DT::Set count() 
- fixed DT::SpanSet duration()
- methods that accepted a DT object, now accept a list of DT objects.
  Suggested by Ben Bennet, I think.
- added _callback_next - "previous-only recurrences"
